# cmake-googletest-template

./: README.md
source/: CMakeLists.txt  func.cpp  func.h  main.cpp  tests.cpp
